--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "build": "build-figma-plugin --typecheck --minify",
     "watch": "build-figma-plugin --typecheck --watch",
     "lint": "eslint . --ext .ts,.tsx",
-    "lintFormat": "eslint . --ext .ts,.tsx --fix"
+    "lintFormat": "eslint . --ext .ts,.tsx --fix",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@create-figma-plugin/ui": "^2.1.5",
@@ -17,11 +18,12 @@
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint": "^8.6.0",
     "jszip": "^3.10.1",
+    "patch-package": "^6.5.0",
     "typescript": "^4.5.4"
   },
   "figma-plugin": {
