--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@create-figma-plugin/ui": "^2.5.0",
-    "@create-figma-plugin/utilities": "^2.5.0",
-    "preact": "^10.6.4"
+    "@create-figma-plugin/ui": "^2.6.0",
+    "@create-figma-plugin/utilities": "^2.6.0",
+    "preact": "^10.17.0"
   },
   "devDependencies": {
-    "@create-figma-plugin/build": "^2.1.5",
-    "@create-figma-plugin/tsconfig": "^2.1.5",
-    "@figma/plugin-typings": "^1.57.0",
-    "@types/node": "^18.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
+    "@create-figma-plugin/build": "^2.6.0",
+    "@create-figma-plugin/tsconfig": "^2.6.0",
+    "@figma/plugin-typings": "^1.74.0",
+    "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "jszip": "^3.10.1",
-    "patch-package": "^6.5.0",
-    "typescript": "^4.5.4"
+    "patch-package": "^8.0.0",
+    "typescript": "^5.1.6"
   },
   "figma-plugin": {
     "editorType": [
-      "figma", "figjam"
+      "figma",
+      "dev"
     ],
     "containsWidget": false,
     "id": "1181873200384736932",
