--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,6 @@
   "main": "build/main.js",
   "ui": "build/ui.js",
   "documentAccess": "dynamic-page",
-  "networkAccess": {
-    "allowedDomains": ["none"]
-  },
+  "networkAccess": { "allowedDomains": ["none"] },
   "capabilities": ["inspect"]
 }
