--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,1 @@
-{
-  "api": "1.0.0",
-  "editorType": ["figma", "dev"],
-  "id": "1181873200384736932",
-  "name": "WebP Exporter",
-  "main": "build/main.js",
-  "ui": "build/ui.js",
-  "documentAccess": "dynamic-page",
-  "networkAccess": { "allowedDomains": ["none"] },
-  "capabilities": ["inspect"]
-}
+{"api":"1.0.0","editorType":["figma","dev"],"id":"1181873200384736932","name":"WebP Exporter","main":"build/main.js","ui":"build/ui.js","documentAccess":"dynamic-page","networkAccess":{"allowedDomains":["none"]},"capabilities":["inspect"]}
