Updates eslint; Updates to newer figma ui plugin to adhere more to the current figma style; Adds more flexible export handling for several different image scales; Adds iOS export option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": ["ESNext.Array", "esnext"],
     "jsx": "react",
     "jsxFactory": "h",
-    "jsxFragmentFactory": "h.Fragment"
+    "jsxFragmentFactory": "h.Fragment",
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
