--- a/package.json
+++ b/package.json
@@ -5,30 +5,26 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "fmt": "prettier . -c",
-    "fmt:fix": "prettier . -w",
-    "postinstall": "patch-package"
+    "fmt:fix": "prettier . -w"
   },
   "dependencies": {
-    "@create-figma-plugin/ui": "3.2.0",
-    "@create-figma-plugin/utilities": "3.2.0",
-    "react": "18.2.0"
+    "@create-figma-plugin/ui": "4.0.3",
+    "@create-figma-plugin/utilities": "4.0.3",
+    "react": "19.2.0"
   },
   "devDependencies": {
-    "@create-figma-plugin/build": "3.2.0",
-    "@create-figma-plugin/tsconfig": "3.2.0",
-    "@figma/eslint-plugin-figma-plugins": "^0.15.0",
-    "@figma/plugin-typings": "1.99.0",
-    "@types/node": "22.5.2",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "8.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-jest": "^28.8.2",
-    "eslint-plugin-react": "^7.35.0",
+    "@create-figma-plugin/build": "4.0.3",
+    "@create-figma-plugin/tsconfig": "4.0.3",
+    "@figma/eslint-plugin-figma-plugins": "^0.16.1",
+    "@figma/plugin-typings": "1.118.0",
+    "@types/node": "24.7.2",
+    "eslint": "^9.37.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-react": "^7.37.5",
     "jszip": "^3.10.1",
-    "patch-package": "^8.0.0",
-    "prettier": "3.2.5",
-    "typescript": "5.5.4"
+    "prettier": "3.6.2",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "figma-plugin": {
     "editorType": [
